  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (e.g. followers) - TTv4

KNOWN ISSUES:
  Corrupted color display on longer posts. XBMC bug as of Frodo 12.1 (Fixed in Gotham 13)

Current Version : 2.1.39

*** 2.1.40 ***

Sequel Skin:
	Added Forum Settings skin
	Added Message Dialog skin
	Added Yes/No Dialog skin

*** 2.1.39 ***

Sequel Skin:
	Added skin for forums manager
	Darkened menu bar for light themed forums
	Extended selection color to window buttons
	Various skin tweaks
Added setting 'Slide Up On Video (On Supported Skins)' in Settings:Video
Fix for header color editor using new color dialog (it's not supposed to do that yet :) )


*** 2.1.38 ***

Add some language strings
Change highlight for 'Started By:' and added highlight for 'Last Post By:' fields on threads view when started by self
Change for 'Delete Line' highlight to make it look less selected and flow better with the add before/after lines

*** 2.1.37 ***

Sequel skin: Added animation to color selection dialog
Sequel skin: Added animation to the background fade level dialog
Sequel skin: Added message editor window
Reworked some message editor code
Created per skin quote wrapping width and increased width on Sequel skin for the various post views

*** 2.1.36 ***

Sequel skin:
	Added a color selection dialog
	Added the ability to set list selection color
	Background images will now fill the window AND keep their aspect ratio
	Some text color tweaks on the threads window

*** 2.1.35 ***

Made item highlights blue in the forums and threads lists (a little on posts)
Fixed image list in message view, now just wraps to beginning when going off the right edge

*** 2.1.34 ***

Implemented setting background image fade with slider dialog in Sequel skin

*** 2.1.33 ***

Preview of new 'Sequel' skin

*** 2.1.32 ***

Theme colors now carried up through message view on Light and Dark skins
New shared activity spinner for Light and Dark skins
